// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logo> default 1`] = `
<div
  className="Logo__Logo-q7fvn9-0 efUBwB"
/>
`;

exports[`<Logo> mini & premium 1`] = `
<div
  className="Logo__Logo-q7fvn9-0 hWTYHT"
/>
`;

exports[`<Logo> mini 1`] = `
<div
  className="Logo__Logo-q7fvn9-0 hWnkCR"
/>
`;
